--- a/android/PmkEventApp/app/src/main/res/values/strings.xml
+++ b/android/PmkEventApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
-    <string name="app_name">PMK</string>
+    <string name="app_name">Polska Misja Katolicka</string>
+
+
+    <string name="nav_main">Strona główna</string>
+    <string name="nav_nabozenstwa">Nabożeństwa</string>
+    <string name="nav_spowiedz">Spowiedź</string>
+    <string name="nav_terminy">Spotkania</string>
+    <string name="nav_rekolekcje">Rekolekcje</string>
+
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -9,9 +17,16 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="nav_nabozenstwa">Nabożeństwa</string>
-    <string name="nav_spowiedz">Spowiedź</string>
-    <string name="nav_rekolekcje">Rekolekcje</string>
+
     <string name="nav_send">Inne</string>
+
+    <string-array name="distance_array">
+        <item>25km</item>
+        <item>50km</item>
+        <item>100km</item>
+        <item>200km</item>
+    </string-array>
+
+    <string name="slectedDistanceRestriction">slectedDistanceRestriction</string>
 
 </resources>
